<resources>
    <string name="app_name">WeiChengLin-ExpenseTracker</string>
    <string name="expense_title_label">Description</string>
    <string name="expense_title_hint">Enter a description for the expense</string>
    <string name="expense_details_label">Date</string>
    <string name="expense_amount_hin">Enter an amount for the expense</string>
    <string name="expense_amount_header">Amount</string>
    <string name="expense_category_header">Category</string>
    <string-array name="categories_array">
        <item>Food</item>
        <item>Entertainment</item>
        <item>Housing</item>
        <item>Utilities</item>
        <item>Fuel</item>
        <item>Automotive</item>
        <item>Misc</item>
    </string-array>
    <string name="new_expense">New Expense</string>
    <string-array name="filters_array">
        <item>All</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Housing</item>
        <item>Utilities</item>
        <item>Fuel</item>
        <item>Automotive</item>
        <item>Misc</item>
    </string-array>
</resources>